# crabscript

./: Cargo.toml  LICENSE  Makefile.toml  README.md
crabscript/: Cargo.toml  build.rs  crabshell.pest
crabscript/src/: command.rs  context.rs  lib.rs
crabscript/src/runtime/: mod.rs  source.rs
crabscript/src/runtime/parser/: error.rs  mod.rs  tokenizer.rs
crabscript/src/sdk/: cd.rs  echo.rs  mod.rs  set.rs
crabscript_cli/: Cargo.toml
crabscript_cli/src/: main.rs
crabscript_derive/: Cargo.toml
examples/: hello_world  hello_world.crab
tree-sitter-crabscript/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  log.html  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-crabscript/bindings/c/: tree-sitter-crabscript.h  tree-sitter-crabscript.pc.in
tree-sitter-crabscript/bindings/go/: binding.go  binding_test.go
tree-sitter-crabscript/bindings/node/: binding.cc  index.js
tree-sitter-crabscript/bindings/python/tests/: test_binding.py
tree-sitter-crabscript/bindings/python/tree_sitter_crabscript/: __init__.py  binding.c
tree-sitter-crabscript/bindings/rust/: build.rs  lib.rs
tree-sitter-crabscript/bindings/swift/TreeSitterCrabscriptTests/: TreeSitterCrabscriptTests.swift
tree-sitter-crabscript/queries/: highlights.scm
tree-sitter-crabscript/src/: grammar.json  node-types.json  parser.c
tree-sitter-crabscript/test/corpus/: commments.txt  instructions.txt
tree-sitter-crabscript/test/examples/: labeled.crab
