[package]
name = "crabscript"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.14"
pest_derive = "2.7.14"
clap = { version = "4.5.21", features = ["derive"] }
miette = "7.2.0"
thiserror = "2.0.3"
attohttp = { version = "0.26.2", optional = true }
crabscript_derive = { path = "../crabscript_derive", optional = true }

[dev-dependencies]
miette = { version = "*", features = ["fancy"] }

[features]
default = ["sdk"]
sdk = ["net"]
net = ["dep:attohttp"]
derive = ["dep:crabscript_derive"]
