[package]
name = "crabscript"
version.workspace = true
edition.workspace = true


[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
miette = "7.2.0"
thiserror = "2.0.3"
attohttp = { version = "0.26.2", optional = true }
crabscript_derive = { path = "../crabscript_derive", optional = true }
tree-sitter = "0.24.5"
tree-sitter-crabscript = { path = "../tree-sitter-crabscript" }

[build-dependencies]
cc = "*"
tree-sitter = "0.24.5"
tree-sitter-crabscript = { path = "../tree-sitter-crabscript" }
stringcase = "0.3.0"
quote = "1.0.37"

[dev-dependencies]
miette = { version = "*", features = ["fancy"] }

[features]
default = ["sdk"]
sdk = ["net"]
net = ["dep:attohttp"]
derive = ["dep:crabscript_derive"]
